// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "marginHorizontal": 12,
        "overflow": "visible",
      },
    ]
  }
>
  <RCTScrollView
    data={
      Array [
        Object {
          "color": "#27B9CD",
          "course_code": "BIO 101",
          "default_view": "wiki",
          "enrollments": Array [
            Object {
              "enrollment_state": "active",
              "role": "TeacherEnrollment",
              "role_id": "1",
              "type": "teacher",
              "user_id": "1",
            },
          ],
          "id": "1",
          "image_download_url": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
          "is_favorite": true,
          "name": "Biology 101",
          "short_name": "BIO 101",
          "term": Object {
            "name": "Default Term",
          },
        },
        Object {
          "color": "#8F3E97",
          "course_code": "LIT 401",
          "default_view": "wiki",
          "enrollments": Array [
            Object {
              "enrollment_state": "active",
              "role": "TeacherEnrollment",
              "role_id": "1",
              "type": "teacher",
              "user_id": "1",
            },
          ],
          "id": "2",
          "image_download_url": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
          "is_favorite": false,
          "name": "American Literature Psysicks foobar hello world 401",
          "short_name": "LIT 401",
          "term": Object {
            "name": "Default Term",
          },
        },
        Object {
          "color": "#8F3E99",
          "course_code": "FOO 102",
          "default_view": "wiki",
          "enrollments": Array [
            Object {
              "enrollment_state": "active",
              "role": "TeacherEnrollment",
              "role_id": "1",
              "type": "teacher",
              "user_id": "1",
            },
          ],
          "id": "3",
          "image_download_url": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
          "is_favorite": true,
          "name": "Foobar 102",
          "short_name": "FOO 102",
          "term": Object {
            "name": "Default Term",
          },
        },
      ]
    }
    dataSource={
      ListViewDataSource {
        "items": 1,
      }
    }
    enableEmptySections={true}
    itemsPerRow={3}
    onEndReached={[Function]}
    onEndReachedThreshold={1334}
    onLayout={[Function]}
    onRefresh={[Function]}
    placeholderStyle={
      Object {
        "flex": 1,
        "margin": 12,
      }
    }
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    refreshing={false}
    renderFooter={[Function]}
    renderHeader={[Function]}
    renderItem={[Function]}
    renderRow={[Function]}
    renderScrollComponent={[Function]}
    renderSectionHeader={undefined}
    showsVerticalScrollIndicator={false}
    style={
      Object {
        "flex": 1,
        "overflow": "visible",
      }
    }
  >
    <RCTRefreshControl />
    <View>
      <View
        style={
          Object {
            "marginTop": 12,
            "paddingHorizontal": 12,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingTop": 4,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/star-filled.png",
                }
              }
              style={
                Object {
                  "height": 18,
                  "tintColor": "#C7CDD1",
                  "width": 18,
                }
              }
              testID="favorited-course-list.header-star-img"
            />
            <Text
              accessibilityTraits="header"
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": ".SFUIDisplay-semibold",
                    "fontSize": 20,
                  },
                  Object {
                    "marginLeft": 6,
                  },
                ]
              }
              testID="favorited-course-list.header-courses-lbl"
            >
              Courses
            </Text>
          </View>
          <TouchableOpacity
            accessibilityTraits="button"
            hitSlop={
              Object {
                "bottom": 15,
                "left": 15,
                "right": 15,
                "top": 15,
              }
            }
            onPress={[Function]}
            testID="favorited-course-list.see-all-btn"
          >
            <View>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Array [
                      Object {
                        "color": "#374A59",
                        "fontSize": 14,
                      },
                      Object {
                        "fontFamily": ".SFUIDisplay-bold",
                      },
                      Object {
                        "color": "#374A59",
                      },
                      Object {},
                      Object {
                        "fontWeight": "500",
                      },
                    ],
                    Object {
                      "fontFamily": ".SFUIDisplay-medium",
                    },
                  ]
                }
              >
                See All
              </Text>
            </View>
          </TouchableOpacity>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "space-around",
          }
        }
      >
        <TouchableHighlight
          accessible={false}
          onLayout={[Function]}
          onPress={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff01",
                "height": 160,
                "shadowColor": "#000",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 0.2,
                "shadowRadius": 1,
              },
              Object {
                "flex": 1,
                "height": 0,
                "margin": 12,
              },
            ]
          }
          testID="BIO 101"
          underlayColor="transparent"
        >
          <View
            style={
              Object {
                "backgroundColor": "white",
                "borderColor": "#e3e3e3",
                "borderRadius": 4,
                "borderWidth": 0.5,
                "flex": 1,
                "overflow": "hidden",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <Image
                source={
                  Object {
                    "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
                  }
                }
                style={
                  Object {
                    "flex": 1,
                  }
                }
              />
              <View
                accessibilityLabel="Biology 101"
                accessibilityTraits="button"
                accessible={true}
                style={
                  Object {
                    "backgroundColor": "#27B9CD",
                    "bottom": 0,
                    "left": 0,
                    "opacity": 0.8,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              />
              <TouchableHighlight
                accessibilityLabel="Open Biology 101 user preferences"
                accessibilityTraits="button"
                accessible={true}
                onPress={[Function]}
                style={
                  Object {
                    "height": 43,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "width": 43,
                  }
                }
                testID="course-card.kabob-1"
                underlayColor="#ffffff00"
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../src/images/kabob.png",
                    }
                  }
                  style={
                    Object {
                      "height": 18,
                      "position": "absolute",
                      "right": 8,
                      "top": 10,
                      "width": 18,
                    }
                  }
                />
              </TouchableHighlight>
            </View>
            <View
              accessible={false}
              style={
                Object {
                  "flex": 1,
                  "paddingHorizontal": 10,
                }
              }
            >
              <Text
                accessible={false}
                allowFontScaling={true}
                ellipsizeMode="tail"
                numberOfLines={2}
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#27B9CD",
                      "fontWeight": "600",
                      "marginTop": 8,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-semibold",
                    },
                  ]
                }
              >
                Biology 101
              </Text>
              <Text
                accessible={false}
                allowFontScaling={true}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#8B969D",
                      "fontSize": 12,
                      "fontWeight": "600",
                      "marginTop": 2,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-semibold",
                    },
                  ]
                }
              >
                BIO 101
              </Text>
            </View>
          </View>
        </TouchableHighlight>
        <TouchableHighlight
          accessible={false}
          onLayout={[Function]}
          onPress={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff01",
                "height": 160,
                "shadowColor": "#000",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 0.2,
                "shadowRadius": 1,
              },
              Object {
                "flex": 1,
                "height": 0,
                "margin": 12,
              },
            ]
          }
          testID="LIT 401"
          underlayColor="transparent"
        >
          <View
            style={
              Object {
                "backgroundColor": "white",
                "borderColor": "#e3e3e3",
                "borderRadius": 4,
                "borderWidth": 0.5,
                "flex": 1,
                "overflow": "hidden",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <Image
                source={
                  Object {
                    "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
                  }
                }
                style={
                  Object {
                    "flex": 1,
                  }
                }
              />
              <View
                accessibilityLabel="American Literature Psysicks foobar hello world 401"
                accessibilityTraits="button"
                accessible={true}
                style={
                  Object {
                    "backgroundColor": "#8F3E97",
                    "bottom": 0,
                    "left": 0,
                    "opacity": 0.8,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              />
              <TouchableHighlight
                accessibilityLabel="Open American Literature Psysicks foobar hello world 401 user preferences"
                accessibilityTraits="button"
                accessible={true}
                onPress={[Function]}
                style={
                  Object {
                    "height": 43,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "width": 43,
                  }
                }
                testID="course-card.kabob-2"
                underlayColor="#ffffff00"
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../src/images/kabob.png",
                    }
                  }
                  style={
                    Object {
                      "height": 18,
                      "position": "absolute",
                      "right": 8,
                      "top": 10,
                      "width": 18,
                    }
                  }
                />
              </TouchableHighlight>
            </View>
            <View
              accessible={false}
              style={
                Object {
                  "flex": 1,
                  "paddingHorizontal": 10,
                }
              }
            >
              <Text
                accessible={false}
                allowFontScaling={true}
                ellipsizeMode="tail"
                numberOfLines={2}
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#8F3E97",
                      "fontWeight": "600",
                      "marginTop": 8,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-semibold",
                    },
                  ]
                }
              >
                American Literature Psysicks foobar hello world 401
              </Text>
              <Text
                accessible={false}
                allowFontScaling={true}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#8B969D",
                      "fontSize": 12,
                      "fontWeight": "600",
                      "marginTop": 2,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-semibold",
                    },
                  ]
                }
              >
                LIT 401
              </Text>
            </View>
          </View>
        </TouchableHighlight>
        <TouchableHighlight
          accessible={false}
          onLayout={[Function]}
          onPress={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff01",
                "height": 160,
                "shadowColor": "#000",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 0.2,
                "shadowRadius": 1,
              },
              Object {
                "flex": 1,
                "height": 0,
                "margin": 12,
              },
            ]
          }
          testID="FOO 102"
          underlayColor="transparent"
        >
          <View
            style={
              Object {
                "backgroundColor": "white",
                "borderColor": "#e3e3e3",
                "borderRadius": 4,
                "borderWidth": 0.5,
                "flex": 1,
                "overflow": "hidden",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <Image
                source={
                  Object {
                    "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
                  }
                }
                style={
                  Object {
                    "flex": 1,
                  }
                }
              />
              <View
                accessibilityLabel="Foobar 102"
                accessibilityTraits="button"
                accessible={true}
                style={
                  Object {
                    "backgroundColor": "#8F3E99",
                    "bottom": 0,
                    "left": 0,
                    "opacity": 0.8,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              />
              <TouchableHighlight
                accessibilityLabel="Open Foobar 102 user preferences"
                accessibilityTraits="button"
                accessible={true}
                onPress={[Function]}
                style={
                  Object {
                    "height": 43,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "width": 43,
                  }
                }
                testID="course-card.kabob-3"
                underlayColor="#ffffff00"
              >
                <Image
                  source={
                    Object {
                      "testUri": "../../../src/images/kabob.png",
                    }
                  }
                  style={
                    Object {
                      "height": 18,
                      "position": "absolute",
                      "right": 8,
                      "top": 10,
                      "width": 18,
                    }
                  }
                />
              </TouchableHighlight>
            </View>
            <View
              accessible={false}
              style={
                Object {
                  "flex": 1,
                  "paddingHorizontal": 10,
                }
              }
            >
              <Text
                accessible={false}
                allowFontScaling={true}
                ellipsizeMode="tail"
                numberOfLines={2}
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#8F3E99",
                      "fontWeight": "600",
                      "marginTop": 8,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-semibold",
                    },
                  ]
                }
              >
                Foobar 102
              </Text>
              <Text
                accessible={false}
                allowFontScaling={true}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#8B969D",
                      "fontSize": 12,
                      "fontWeight": "600",
                      "marginTop": 2,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-semibold",
                    },
                  ]
                }
              >
                FOO 102
              </Text>
            </View>
          </View>
        </TouchableHighlight>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`render while pending 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="small"
    style={
      Object {
        "flex": 1,
      }
    }
  />
</View>
`;

exports[`render without courses and *zero* total courses 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "marginHorizontal": 12,
        "overflow": "visible",
      },
    ]
  }
>
  <RCTScrollView
    data={Array []}
    dataSource={
      ListViewDataSource {
        "items": 0,
      }
    }
    enableEmptySections={true}
    itemsPerRow={3}
    onEndReached={[Function]}
    onEndReachedThreshold={1334}
    onLayout={[Function]}
    onRefresh={[Function]}
    placeholderStyle={
      Object {
        "flex": 1,
        "margin": 12,
      }
    }
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    refreshing={false}
    renderFooter={[Function]}
    renderHeader={[Function]}
    renderItem={[Function]}
    renderRow={[Function]}
    renderScrollComponent={[Function]}
    renderSectionHeader={undefined}
    showsVerticalScrollIndicator={false}
    style={
      Object {
        "flex": 1,
        "overflow": "visible",
      }
    }
  >
    <RCTRefreshControl />
    <View>
      <View
        style={
          Object {
            "marginTop": 12,
            "paddingHorizontal": 12,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingTop": 4,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/star-filled.png",
                }
              }
              style={
                Object {
                  "height": 18,
                  "tintColor": "#C7CDD1",
                  "width": 18,
                }
              }
              testID="favorited-course-list.header-star-img"
            />
            <Text
              accessibilityTraits="header"
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": ".SFUIDisplay-semibold",
                    "fontSize": 20,
                  },
                  Object {
                    "marginLeft": 6,
                  },
                ]
              }
              testID="favorited-course-list.header-courses-lbl"
            >
              Courses
            </Text>
          </View>
          <TouchableOpacity
            accessibilityTraits="button"
            hitSlop={
              Object {
                "bottom": 15,
                "left": 15,
                "right": 15,
                "top": 15,
              }
            }
            onPress={[Function]}
            testID="favorited-course-list.see-all-btn"
          >
            <View>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Array [
                      Object {
                        "color": "#374A59",
                        "fontSize": 14,
                      },
                      Object {
                        "fontFamily": ".SFUIDisplay-bold",
                      },
                      Object {
                        "color": "#374A59",
                      },
                      Object {},
                      Object {
                        "fontWeight": "500",
                      },
                    ],
                    Object {
                      "fontFamily": ".SFUIDisplay-medium",
                    },
                  ]
                }
              >
                See All
              </Text>
            </View>
          </TouchableOpacity>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`render without favorite courses 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
      "paddingHorizontal": 40,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": ".SFUIDisplay",
        },
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
        },
        Object {
          "color": "#2D3B45",
          "fontSize": 30,
          "lineHeight": 36,
          "marginBottom": 8,
        },
        Object {
          "fontFamily": ".SFUIDisplay",
        },
      ]
    }
    testID="no-courses.welcome-lbl"
  >
    Welcome!
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": ".SFUIDisplay",
        },
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
        },
        Object {
          "color": "#8B969E",
          "fontSize": 16,
          "lineHeight": 19,
          "marginBottom": 40,
          "paddingHorizontal": 10,
          "textAlign": "center",
        },
        Object {
          "fontFamily": ".SFUIDisplay",
        },
      ]
    }
    testID="no-courses.description-lbl"
  >
    Add a few of your favorite courses to make this place your home.
  </Text>
  <TouchableOpacity
    accessibilityComponentType="button"
    accessibilityTraits="button"
    activeOpacity={0.2}
    delayLongPress={undefined}
    delayPressIn={undefined}
    delayPressOut={undefined}
    onLongPress={undefined}
    onPress={[Function]}
    onPressIn={undefined}
    onPressOut={undefined}
    style={
      Array [
        Object {
          "backgroundColor": "#374A59",
          "borderRadius": 8,
          "overflow": "hidden",
          "padding": 10,
        },
        Object {
          "backgroundColor": "#374A59",
        },
        Object {
          "borderRadius": 4,
          "paddingHorizontal": 24,
          "paddingVertical": 16,
        },
      ]
    }
    testID="no-courses.add-courses-btn"
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#007aff",
            "fontSize": 17,
            "fontWeight": "500",
            "textAlign": "center",
          },
          null,
          Array [
            Object {
              "color": "white",
            },
            Object {
              "color": "white",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 19,
            },
          ],
          null,
        ]
      }
    >
      Add Courses
    </Text>
  </TouchableOpacity>
</View>
`;
